_docs/v0.60/embedding/sdk/api/snippets/MetabaseProviderProps.md
---
version: v0.60
has_magic_breadcrumbs: true
show_category_breadcrumb: true
show_title_breadcrumb: true
category: Embedding
title: MetabaseProviderProps
source_url: 'https://github.com/metabase/metabase/blob/master/docs/embedding/sdk/api/snippets/MetabaseProviderProps.md'
layout: new-docs
---

**`Expand`**

## Properties

<!-- [<snippet properties>] -->

| Property                                                            | Type                                                                                                                                                                         | Description                                                                                                                                                                                                                                 |
| :------------------------------------------------------------------ | :--------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | :------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
| <a id="allowconsolelog"></a> `allowConsoleLog?`                     | `boolean`                                                                                                                                                                    | Whether to allow logging to the DevTools console. Defaults to true.                                                                                                                                                                         |
| <a id="authconfig"></a> `authConfig`                                | [`MetabaseAuthConfig`](./api/MetabaseAuthConfig)                                                                                                                          | Defines how to authenticate with Metabase.                                                                                                                                                                                                  |
| <a id="children"></a> `children`                                    | [`ReactNode`](https://github.com/DefinitelyTyped/DefinitelyTyped/blob/0b728411cd1dfb4bd26992bb35a73cf8edaa22e7/types/react/index.d.ts#L478)                                  | The children of the MetabaseProvider component.                                                                                                                                                                                             |
| <a id="classname"></a> ~~`className?`~~                             | `string`                                                                                                                                                                     | A custom class name to be added to the root element. **Deprecated** This prop is not used anymore.                                                                                                                                          |
| <a id="errorcomponent"></a> `errorComponent?`                       | [`SdkErrorComponent`](./api/SdkErrorComponent)                                                                                                                            | A custom error component to display when the SDK encounters an error.                                                                                                                                                                       |
| <a id="eventhandlers"></a> `eventHandlers?`                         | [`SdkEventHandlersConfig`](./api/SdkEventHandlersConfig)                                                                                                                  | See [Global event handlers](/docs/v0.60/embedding/sdk/config#global-event-handlers).                                                                                                                               |
| <a id="loadercomponent"></a> `loaderComponent?`                     | [`ComponentType`](https://github.com/DefinitelyTyped/DefinitelyTyped/blob/0b728411cd1dfb4bd26992bb35a73cf8edaa22e7/types/react/index.d.ts#L104)\<\{ `label?`: `string`; \}\> | A custom loader component to display while the SDK is loading. The component receives an optional `label` prop that can be used to display a loading message.                                                                               |
| <a id="locale"></a> `locale?`                                       | `string`                                                                                                                                                                     | Defines the display language. Accepts an ISO language code such as `en` or `de`. Defaults to the instance locale.                                                                                                                           |
| <a id="pluginsconfig"></a> `pluginsConfig?`                         | [`MetabaseGlobalPluginsConfig`](./api/MetabaseGlobalPluginsConfig)                                                                                                        | See [Plugins](/docs/v0.60/embedding/sdk/plugins).                                                                                                                                                                  |
| <a id="theme"></a> `theme?`                                         | [`MetabaseEmbeddingTheme`](./api/MetabaseEmbeddingTheme)                                                                                                                  | See [Appearance](/docs/v0.60/embedding/sdk/appearance).                                                                                                                                                            |
| <a id="uselegacymonolithicbundle"></a> `useLegacyMonolithicBundle?` | `boolean`                                                                                                                                                                    | Whether to load the full SDK bundle directly as a single file (legacy behavior), instead of the optimized bootstrap that loads chunks in parallel and starts authentication early. Defaults to false (uses the optimized bootstrap loader). |

<!-- [<endsnippet properties>] -->
